# testing-handbook

./: .gitignore  .lycheeignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .markdownlintignore  .prettierrc  CODEOWNERS  README.md  config.toml  mlc_config.json  package-lock.json  package.json  shell.nix
.github/: dependabot.yml
.github/workflows/: .markdownlint.jsonc  dictionary.txt  hugo.yml  markdown.yml  preview.yml
assets/: _custom.scss  _variables.scss  mermaid.json
content/: _index.md
content/docs/: template.md
content/docs/crypto/: _index.md
content/docs/crypto/constant_time_tool/: Dudect.md  _index.md  timecop.md
content/docs/crypto/wycheproof/: _index.md  wycheproo_example.md
content/docs/crypto/zkdocs/: _index.md
content/docs/dynamic-analysis/: _index.md
content/docs/formal-verification/: _index.md
content/docs/formal-verification/tamarin/: 00-basic-concepts.md  00-installation.md  _index.md  (+1 more)
content/docs/fuzzing/: 10-ossfuzz.md  3-python.md  4-ruby.md  5-snapshot.md  90-techniques.md  91-resources.md  _index.md
content/docs/languages/: _index.md
content/docs/static-analysis/: _index.md
content/docs/web/: _index.md
layouts/_default/_markup/: render-link.html
layouts/shortcodes/: checklist.html  customFigure.html  rawHtml.html  resourceFigure.html  resourceHref.html  staticref.html  tooltipHighlight.html
layouts/shortcodes/fuzzing/: intro-os.html  oss-fuzz-faq.html  real-world-cmake.md  real-world-libpng-dictionary.md  real-world-libpng-harness.md  real-world-libpng.md  zlib.md
materials/fuzzing/: coverage.c
materials/fuzzing/aflpp/: CMakeLists.txt  afl++  argv-fuzz-inl.h  fuzz  harness.cc  main_arg.c  main_arg_no_shared.c  main_arg_persist.c  main_asan.cc  main_file.c  main_file_persist.c  main_stdin.c  main_stdin_persist.c  main_stdin_persist_no_shared.c
materials/fuzzing/complex-example/: data_provider.cc  divide.cc  divide.json  gdc.cc  interleved.cc
materials/fuzzing/coverage-analysis/: execute-rt.cc
materials/fuzzing/libafl/appsec_guide/: CMakeLists.txt  Cargo.toml  harness.cc  main.cc
materials/fuzzing/libafl/appsec_guide/src/: lib.rs
materials/fuzzing/libfuzzer/: CMakeLists.txt
materials/fuzzing/libfuzzer/interleaved/: double.cc  int.cc
materials/fuzzing/pc-trace/: cb.cc  trace-pc-guard-example.cc
materials/fuzzing/rust/: run.rs
materials/fuzzing/rust/cargo-fuzz/fuzz/: Cargo.toml
materials/fuzzing/rust/cargo-fuzz/fuzz/fuzz_targets/: fuzz_arbitrary.rs  fuzz_arbitrary_short.rs  fuzz_beyond_byte_arrays.rs  fuzz_check_buf.rs  fuzz_divide.rs  fuzz_impossible.rs  fuzz_interleaved.rs  fuzz_interleaved_int.rs  fuzz_slow_with_init.rs
materials/rust/coverage/: Cargo.toml  Dockerfile  README.md  get_coverage.sh
samples/rust_coverage/: Dockerfile  README.md  get_coverage.sh
samples/rust_coverage/src/: main.rs  second.rs
samples/rust_tests/: Cargo.toml
samples/rust_tests/fuzz/: Cargo.toml
samples/rust_tests/fuzz/fuzz_targets/: fuzz_target_1.rs
samples/rust_tests/src/: lib.rs  main.rs  unit_tests.rs
static/samples_rust_coverage/: tarpaulin-report.html
static/samples_rust_coverage/grcov/: coverage.json  index.html
static/samples_rust_coverage/grcov_lcov/: index-sort-f.html  index-sort-l.html  index.html  lcov
static/samples_rust_coverage/grcov_llvm/: coverage.json  index.html
static/samples_rust_coverage/grcov_llvm_lcov/: index-sort-f.html  index-sort-l.html  index.html  lcov
static/samples_rust_coverage/llvm_cov/: index.html
static/samples_rust_coverage/llvm_cov_pretty/: index.html  style.css
(+158 files in other folders)
